# bbase-client

./: Cargo.toml  flake.nix  graphql.config.json  query.graphql  schema.json
res/: repo_page.blp  repo_page.ui  repo_row.blp  repo_row.ui  resources.gresource.xml  window.blp  window.ui
src/: main.rs  repos.rs
src/repo_object/: imp.rs  mod.rs
src/repo_page/: imp.rs  mod.rs
src/repo_row/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
