[package]
name = "bbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.6", package = "libadwaita", features = ["v1_4"] }
gtk = { package = "gtk4", version = "0.8", features = ["v4_10", "blueprint"] }
chrono = { version = "0.4.33", features = ["serde"] }
graphql_client = { version = "0.13.0", features = ["reqwest-rustls"] }
reqwest = { version = "0.11.24", default-features = false, features = ["rustls"] }
serde = { version = "1.0.196", features = ["derive"] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
async-channel = "2.2.0"

[build-dependencies]
glib-build-tools = "0.19.0"
