[package]
name = "bbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7.*", package = "libadwaita", features = ["v1_6"] }
gtk = { package = "gtk4", version = "0.9.*", features = ["gnome_47", "blueprint"] }
chrono = { version = "0.4.40", features = ["serde"] }
graphql_client = { version = "0.14.0", features = ["reqwest-rustls"] }
reqwest = { version = "0.11.24", default-features = false, features = ["rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
async-std = { version = "1.13.1", features = ["attributes", "tokio1"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
async-channel = "2.2.0"

[build-dependencies]
glib-build-tools = "0.20.0"
